--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
     <main>
         <form>
             <fieldset id="input-inf">
+                <legend> IMC - Calculadora </legend>
+
                 <label>
-                    <h2>Altura </h2>
                     <input id="height" type="number" required placeholder="1.72m" step="0.03"/>
+                    <h2>Altura </h2>
                 </label>
 
                 <label>
-                    <h2>Peso </h2>
                     <input id="weight" type="number" required placeholder="68kg"/>
+                    <h2>Peso </h2>
                 </label>
 
                 <button type="submit">enviar </button>
