--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
     <main>
         <form>
             <fieldset id="input-inf">
-                <legend> IMC - Calculadora </legend>
+                <legend> 
+                    </h1>IMC - Calculadora </h1> <!-- !TODO -->
+                </legend>
+                
 
                 <label>
-                    <input id="height" type="number" required placeholder="1.72m" step="0.03"/>
+                    <input id="height" type="number" required placeholder="1.72m" step="0.03" title="Digite sua altura"/>
                     <h2>Altura </h2>
                 </label>
 
                 <label>
-                    <input id="weight" type="number" required placeholder="68kg"/>
+                    <input id="weight" type="number" required placeholder="68kg" title="Digite seu peso"/>
                     <h2>Peso </h2>
                 </label>
 
