--- a/index.html
+++ b/index.html
@@ -18,30 +18,33 @@
 </head>
 <body>
     <main>
-        <form>
+        <form id="formulario" method="get">
             <fieldset id="input-inf">
                 <legend> 
                     </h1>IMC - Calculadora </h1> <!-- !TODO -->
                 </legend>
-                
+
 
                 <label>
-                    <input id="height" type="number" required placeholder="1.72m" step="0.03" title="Digite sua altura"/>
+                    <input id="altura" type="number" required placeholder="1.72m" step='0.01' title="Digite sua altura"/>
                     <h2>Altura </h2>
                 </label>
 
                 <label>
-                    <input id="weight" type="number" required placeholder="68kg" title="Digite seu peso"/>
+                    <input id="peso" type="number" required placeholder="68kg" title="Digite seu peso"/>
                     <h2>Peso </h2>
                 </label>
 
                 <button type="submit">enviar </button>
             </fieldset>
 
-            <fieldset id="output-inf">
-                <div id="">.. </div>
-            </fieldset>
         </form>
+
+        <section id="output">
+            <div id='imcOutput' class="typing">.. </div>
+        </div>
     </main>
+
+    <script src="./assets/JS/app.js"> </script>
 </body>
 </html>
