--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </form>
 
         <section id="output">
-            <div id='imcOutput' class="typing">.. </div>
+            <div id='imcOutput' class="">.. </div>
         </div>
     </main>
 
